styles/globals.css
/* Глобальные стили для проекта, их можно дополнять и менять по желанию */

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  min-inline-size: 375px;
  max-inline-size: 1440px;
  margin: 0 auto;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

picture {
  margin: 0;
  padding: 0;
}

button,
a {
  color: currentColor;
  border: none;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

